noinst_LTLIBRARIES = libz.la

HDRS = deflate.h infblock.h infcodes.h inffast.h inffixed.h inftrees.h \
	infutil.h trees.h zconf.h zlib.h zutil.h

libz_la_SOURCES = $(HDRS) adler32.c compress.c crc32.c deflate.c gzio.c \
	infblock.c infcodes.c inffast.c inflate.c inftrees.c infutil.c \
	trees.c uncompr.c zutil.c
