noinst_LTLIBRARIES = libz.la

HDRS = crc32.h deflate.h gzguts.h inffast.h inffixed.h inflate.h inftrees.h \
	trees.h zconf.h zlib.h zutil.h

libz_la_SOURCES = $(HDRS) adler32.c compress.c crc32.c deflate.c gzclose.c \
	gzlib.c gzread.c gzwrite.c inflate.c infback.c inftrees.c inffast.c \
	trees.c uncompr.c zutil.c

EXTRA_DIST = CMakeLists.txt
